Bug #26895
multisite: intermittent failures in test_bucket_sync_disable_enable
Status:
Pending Backport
Priority:
Normal
Assignee:
-
Target version:
-
Start date:
08/10/2018
Due date:
% Done:
0%
Source:
Tags:
multisite
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Description
The test writes some objects while bucket sync is disabled, and those objects sometimes don't sync after its reenabled. This is due to logic in RGWBucketShardIncrementalSyncCR that will continue with incremental sync if it sees both CLS_RGW_OP_SYNCSTOP and CLS_RGW_OP_RESYNC in the same bi listing. This isn't safe, though, because changes while sync is disabled don't add entries to the bilog. So the only way to guarantee that we don't miss any changes is to switch back to full sync instead.
Related issues
History
#2 Updated by Casey Bodley 6 months ago
- Status changed from New to Need Review
#3 Updated by Casey Bodley 6 months ago
- Backport set to luminous mimic
#4 Updated by Casey Bodley 6 months ago
- Status changed from Need Review to Pending Backport
#5 Updated by Nathan Cutler 6 months ago
- Copied to Backport #26979: luminous: multisite: intermittent failures in test_bucket_sync_disable_enable added
#6 Updated by Nathan Cutler 6 months ago
- Copied to Backport #26980: mimic: multisite: intermittent failures in test_bucket_sync_disable_enable added